# systemd

./: Cargo.toml  meson.build  meson_options.txt
man/: systemd.exec.xml
rules/: 99-systemd.rules.in
src/core/: dbus-execute.c  dbus-manager.c  execute.c  execute.h  load-fragment.c  load-fragment.h  main.c  manager.c  manager.h  mount.c  service.c  socket.c  swap.c  unit.c
src/firstboot/: Cargo.toml  firstboot.c  firstboot.rs  firstboot_compat.c  meson.build
src/rust/rshared/: Cargo.toml
src/rust/rshared/src/: lib.rs
src/rust/rshared/src/sysv_generator/: mod.rs
src/rust/rshared_ffi/: Cargo.toml  meson.build
src/rust/rshared_ffi/src/: lib.rs
src/rust/rshared_ffi/src/sysv_generator/: mod.rs
src/sysv-generator/: Cargo.toml  meson.build  sysv-generator.c  sysv-generator.rs  sysv-generator_compat.c
tools/: meson-cargo-cdylib.sh  meson-cargo.sh
